cluster/apps/networking/teleport/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teleport-ingress
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: "kube-system-forwardauth-authelia@kubernetescrd"
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    # hajimari.io/icon: "traffic-light"
    # hajimari.io/appName: "traefik"
spec:
  tls:
    - secretName: "tls.teleport"
      hosts:
        - "teleport.${SECRET_DOMAIN}"
  rules:
    - host: teleport.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teleport
                port:
                  number: 443
